My first Web designing Program

--- a/Html/index.html
+++ b/Html/index.html
@@ -1,1 +1,70 @@
-<p> This is web designing repo</p>
+<!DOCTYPE>
+
+<html>
+
+<head>
+
+<title>SRGI</title>
+
+<meta name="viewport"content="width=device- width,initialscale=1.0">
+
+</head>
+<body>
+    <style>
+        table,th,td{
+
+    
+border:2px solid rgb(0, 0, 0); border-collapse:collapse; } 
+
+ th,td{
+      padding: 10px;
+
+ } a {color: blue;}
+  text-decoration:none;
+  color:rgb(134,72,11);
+}
+</style>
+
+<table Style="width:100%">
+
+<tr style="background-color: rgb(231, 157, 157);">
+
+<th><img
+
+      src="https://tse4.mm.bing.net/th/id/OIP.YU7U3pv9RLGb48j6087OewHaHa?pid=Api&P=0&h=180"
+     alt="SRGI logo" height="70"
+     width="70"aligN="center" style="maxwidth:100%;height:auto;" >
+</th>
+<th colspan="4" style="color: rgb(17,
+
+88, 126);"><h1><b>S R GROUP OF INSTITUTION</b></h1></th>
+
+<tr style="background-color:rgb(239, 235, 235);">
+
+
+<th>HOME</th>
+
+<th><a href="Catalouge.html">LOGIN</a></th>
+
+<th><a href="Cart.html">REGISTRATION</a></th> 
+<th><a href="Login.html">CATALOGUE</a></th>
+
+<th><a href="Signup.html">CART</a></th>
+
+</tr>
+
+<td
+
+align="center">ComputerScience<br><br><br>Electrical<br><br><br>EEE<br><br><br>CIVIL </td>
+
+<td 
+
+<td colspan="4" align="center">
+
+<p style="font-size: 20;">Description of the Website.</p></td>
+
+</table>
+
+</body>
+
+</html>
